--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,24 +11,28 @@
     </div>
   <% end %>
 
+  <h2>Enter User Details</h2>
+
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :name, 'Name:' %>
+    <%= form.text_field :name, size: 40 %>
   </div>
 
   <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
+    <%= form.label :password, 'Password:' %>
+    <%= form.password_field :password, size: 40 %>
   </div>
 
   <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
+    <%= form.label :password_confirmation, 'Confirm:' %>
+    <%= form.password_field :password_confirmation,
+                            id: :user_password_confirmation,
+                            size: 40 %>
   </div>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.label :email, 'Email' %>
+    <%= form.email_field :email, size: 40 %>
   </div>
 
   <div class="actions">
