--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -22,6 +22,7 @@
       <tr>
         <td><%= appointment.start_time %></td>
         <td><%= appointment.end_time %></td>
+        <td>Doctor Id <%= appointment.doctor_id %></td>
         <td><%= link_to 'Show', appointment %></td>
         <td><%= link_to 'Edit', edit_appointment_path(appointment) %></td>
         <td><%= link_to 'Destroy', appointment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
