--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Appointment</h1>
 
-<%= render 'form', appointment: @appointment %>
+<%= render 'form', appointment: @appointment, doctors: @doctors %>
 
 <%= link_to 'Back', appointments_path %>
