--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,16 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Hospital</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href=<%= main_page_path %>>Main page</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href=<%= appointments_path %>>Appointments</a>
             </li>
@@ -27,9 +30,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href=<%= users_path %>>Users</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= new_user_path %>>Create user</a>
             </li>
           </ul>
         </div>
