--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -1,15 +1,19 @@
-<h1>MainPage#index</h1>
+<h1>Our doctors</h1>
 
-<ul>
+<div class="row">
   <% @doctors.each do |doctor| %>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><%= doctor.name %></h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <%= link_to 'Make an appointment', new_appointment_path(doctor_id: doctor.id), :class => "btn btn-primary" %>
+    <div class="col-sm">
+      <div class="card" >
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><%= doctor.name %></h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <%= link_to 'Make an appointment', new_appointment_path(doctor_id: doctor.id), :class => "btn btn-primary" %>
+        </div>
       </div>
     </div>
   <% end %>
-</ul>
+</div>
+
+
 
