--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -28,6 +28,10 @@
     <%= form.datetime_select :end_time %>
   </div>
 
+  <div class="field">
+    <%= form.hidden_field :user_id, value: @user_id %>
+  </div>
+
   <% if params["doctor_id"] %>
     <div class="field">
       <%= form.hidden_field :doctor_id, value: params["doctor_id"] %>
