--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :position %>
   </div>
 
+  <div class="field">
+    <%= form.label :img %>
+    <%= form.text_field :img %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
