--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -2,9 +2,9 @@
 
 <div class="row">
   <% @doctors.each do |doctor| %>
-    <div class="col-sm">
+    <div style="max-width: 300px" >
       <div class="card" >
-        <img src="..." class="card-img-top" alt="...">
+        <img src=<%= doctor.img %> class="card-img-top" height="200" alt="...">
         <div class="card-body">
           <h5 class="card-title"><%= doctor.name %></h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
