--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -20,12 +20,12 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.datetime_select :start_time %>
+    <%= form.datetime_select :start_time, :id => 'start_time' %>
   </div>
 
   <div class="field">
     <%= form.label :end_time %>
-    <%= form.datetime_select :end_time %>
+    <%= form.datetime_select :end_time, :id => 'end_time' %>
   </div>
 
   <div class="field">
@@ -51,3 +51,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+
