--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -11,6 +11,7 @@
 <table>
   <thead>
     <tr>
+      <th>User name</th>
       <th>Start time</th>
       <th>End time</th>
       <th>Doctor name</th>
@@ -21,6 +22,7 @@
   <tbody>
     <% @appointments.each do |appointment| %>
       <tr>
+        <td><%= appointment.user.name %></td>
         <td><%= appointment.start_time %></td>
         <td><%= appointment.end_time %></td>
         <td><%= appointment.doctor.name %></td>
