--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,15 +34,16 @@
             <li class="nav-item">
               <a class="nav-link" href=<%= users_path %>>Users</a>
             </li>
-            <form class="form-inline ml-auto">
-                <% if logged_in?%>
-                  <%= link_to "Logout", '/logout', method: :delete, class: "btn btn-secondary" %>
-                <% else %>
-                  <%= link_to "Login", '/login', method: :get, class: "btn btn-outline-secondary" %>
-                  <%= link_to "Sign Up", '/users/new', method: :get, class: "btn btn-outline-primary" %>
-                <% end %>
-            </form>
           </ul>
+          <form class="form-inline ml-auto">
+            <% if logged_in?%>
+              <button type="button" class="btn btn-outline-secondary disabled"><%= current_user.name %></button>
+              <%= link_to "Logout", '/logout', method: :delete, class: "btn btn-secondary" %>
+            <% else %>
+              <%= link_to "Login", '/login', method: :get, class: "btn btn-outline-secondary" %>
+              <%= link_to "Sign Up", '/users/new', method: :get, class: "btn btn-outline-primary" %>
+            <% end %>
+          </form>
         </div>
       </nav>
 
