--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -3,4 +3,4 @@
 
 <%= render 'form', appointment: @appointment, doctors: @doctors %>
 
-<%= link_to 'Back', appointments_path %>
+<%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary' %>
