--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -10,5 +10,5 @@
   <%= @appointment.end_time %>
 </p>
 
-<%= link_to 'Edit', edit_appointment_path(@appointment) %> |
-<%= link_to 'Back', appointments_path %>
+<!--<%#= link_to 'Edit', edit_appointment_path(@appointment), :class => 'btn btn-outline-secondary' %> |-->
+<%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary' %>
