--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -20,7 +20,7 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.datetime_select :start_time, :id => 'start_time' %>
+    <%= form.datetime_select :start_time, :id => 'start_time', html5: true %>
   </div>
 
   <div class="field">
@@ -48,7 +48,7 @@
 
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit :class => 'btn btn-outline-primary' %>
   </div>
 <% end %>
 
