--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -10,5 +10,5 @@
   <%= @doctor.position %>
 </p>
 
-<%= link_to 'Edit', edit_doctor_path(@doctor) %> |
-<%= link_to 'Back', doctors_path %>
+<%= link_to 'Edit', edit_doctor_path(@doctor), :class => 'btn btn-outline-secondary' %> |
+<%= link_to 'Back', doctors_path, :class => 'btn btn-outline-secondary' %>
