--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,7 @@
-<p id="notice"><%= notice %></p>
 
+<% if notice %>
+  <p id="notice", class="alert alert-success"><%= notice %></p>
+<% end %>
 <p>
   <strong>Start time:</strong>
   <%= @appointment.start_time %>
