--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: doctor, local: true) do |form| %>
   <% if doctor.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(doctor.errors.count, "error") %> prohibited this doctor from being saved:</h2>
+      <h2 class="alert alert-danger"><%= pluralize(doctor.errors.count, "error") %> prohibited this doctor from being saved:</h2>
 
       <ul>
         <% doctor.errors.full_messages.each do |message| %>
