--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,43 +10,44 @@
   </head>
 
   <body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Hospital</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href=<%= welcome_path %>>Home page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href=<%= main_page_index_path %>>Make an appointment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href=<%= appointments_path %>>Appointments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href=<%= doctors_path %>>Doctors</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href=<%= users_path %>>Users</a>
+        </li>
+      </ul>
+      <form class="form-inline ml-auto">
+        <% if logged_in?%>
+          <button type="button" class="btn btn-outline-success disabled"><%= current_user.name %></button>
+          <%= link_to "Logout", '/logout', method: :delete, class: "btn btn-secondary" %>
+        <% else %>
+          <%= link_to "Login", '/login', method: :get, class: "btn btn-outline-secondary" %>
+          <%= link_to "Sign Up", '/users/new', method: :get, class: "btn btn-outline-primary" %>
+        <% end %>
+      </form>
+    </div>
+  </nav>
+
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Hospital</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href=<%= welcome_path %>>Home page</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= main_page_index_path %>>Make an appointment</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= appointments_path %>>Appointments</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= doctors_path %>>Doctors</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= users_path %>>Users</a>
-            </li>
-          </ul>
-          <form class="form-inline ml-auto">
-            <% if logged_in?%>
-              <button type="button" class="btn btn-outline-secondary disabled"><%= current_user.name %></button>
-              <%= link_to "Logout", '/logout', method: :delete, class: "btn btn-secondary" %>
-            <% else %>
-              <%= link_to "Login", '/login', method: :get, class: "btn btn-outline-secondary" %>
-              <%= link_to "Sign Up", '/users/new', method: :get, class: "btn btn-outline-primary" %>
-            <% end %>
-          </form>
-        </div>
-      </nav>
-
       <%= yield %>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
