--- a/app/assets/stylesheets/doctors.scss
+++ b/app/assets/stylesheets/doctors.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Doctors controller here.
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+//#table {
+//  background-color: #999999;
+//}
+
+#table {
+  background-color: #999999;
+}
