--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Doctors</h1>
 
-<table>
+<table id='table'>
   <thead>
     <tr>
       <th>Name</th>
@@ -27,3 +27,5 @@
 <br>
 
 <%= link_to 'New Doctor', new_doctor_path, :class => 'btn btn-outline-primary' %>
+
+<%= javascript_pack_tag 'myjs' %>
