add js to appointment form

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -28,4 +28,4 @@
 
 <%= link_to 'New Doctor', new_doctor_path, :class => 'btn btn-outline-primary' %>
 
-<%= javascript_pack_tag 'myjs' %>
+<%#= javascript_pack_tag 'myjs' %>
