repair the nearest appointments

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -12,9 +12,7 @@
   <% end %>
 
   <% if  params[:doctor_id]%>
-    <h3>
-      to doctor: <%= @doctor.name  %>
-    </h3>
+    <h2>Make an appointment with doctor <%= @doctor.name %></h2>
   <% end %>
 
 
