--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
           <a class="nav-link" href=<%= main_page_index_path %>>Make an appointment</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href=<%= user_cabinet_index_path %>>My account</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href=<%= appointments_path %>>Appointments</a>
         </li>
         <li class="nav-item">
