--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with(model: appointment, local: true) do |form| %>
   <% if appointment.errors.any? %>
     <div id="error_explanation">
-      <h2 class="alert alert-danger"><%= pluralize(appointment.errors.count, "error") %> prohibited this appointment from being saved:</h2>
+<!--      <h2 class="alert alert-danger"><%#= pluralize(appointment.errors.count, "error") %> prohibited this appointment from being saved</h2>-->
 
       <ul>
         <% appointment.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <li class="alert alert-danger"><%= message %></li>
         <% end %>
       </ul>
     </div>
@@ -20,6 +20,7 @@
     <%= form.label :start_time %>
     <%= form.datetime_select :start_time, :id => 'start_time', html5: true %>
   </div>
+
 
   <div class="field">
     <%= form.label :end_time %>
@@ -37,8 +38,7 @@
   <% else %>
     <div class="field">
       <%= form.label :doctor_id %>
-      <%= form.select :doctor_id,
-                      @doctors.map{ |doc| ["#{doc.name}", doc.id] } %>
+      <%= form.select :doctor_id, @doctors.map{ |doc| ["#{doc.name}", doc.id] } %>
     </div>
   <% end %>
 
