--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -2,17 +2,33 @@
 <% if  @doctor%>
   <% if @doctor_this_day_appointments.length > 0 %>
     <h2>This day appointments to <%= @doctor.name %></h2>
-    <ul>
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col">User name</th>
+        <th scope="col">Date</th>
+        <th scope="col">Start time</th>
+        <th scope="col">End time</th>
+      </tr>
+      </thead>
+
+      <tbody>
       <% @doctor_this_day_appointments.each do |appointment| %>
-        <li> <%= appointment.start_time %> - <%= appointment.end_time %></li>
+        <tr>
+          <td><%= appointment.user.name %></td>
+          <td><%= appointment.start_time.strftime('%F') %></td>
+          <td><%= appointment.start_time.strftime('%H:%M') %></td>
+          <td><%= appointment.end_time.strftime('%H:%M') %></td>
+        </tr>
       <% end %>
-    </ul>
+      </tbody>
+    </table>
   <% else %>
     <h2>There are no appointments on this day</h2>
   <% end %>
 <% end %>
 
 
-<%= render 'form', appointment: @appointment, doctors: @doctors %>
+<%= render 'form', appointment: @appointment %>
 
 <%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary' %>
