--- a/app/views/certain_day_appointments/index.html.erb
+++ b/app/views/certain_day_appointments/index.html.erb
@@ -1,15 +1,31 @@
 
 
 <h2>Your appointment was successfully created to <%= @doctor.name %></h2>
-<ul>
-  <% @doctor_this_day_appointments.each do |appointment| %>
-    <% if appointment.id === @your_appointment.id %>
-      <li class="text-primary"> <%= appointment.start_time %> - <%= appointment.end_time %></li>
-    <% else %>
-      <li> <%= appointment.start_time %> - <%= appointment.end_time %></li>
-    <% end %>
-  <% end %>
-</ul>
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col">User name</th>
+        <th scope="col">Date</th>
+        <th scope="col">Start time</th>
+        <th scope="col">End time</th>
+      </tr>
+      </thead>
+
+      <tbody>
+      <% @doctor_this_day_appointments.each do |appointment| %>
+        <% if appointment.id === @your_appointment.id %>
+          <tr class="text-primary">
+        <% else %>
+          <tr>
+        <% end %>
+          <td><%= appointment.user.name %></td>
+          <td><%= appointment.start_time.strftime('%F') %></td>
+          <td><%= appointment.start_time.strftime('%H:%M') %></td>
+          <td><%= appointment.end_time.strftime('%H:%M') %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
 
 
 <%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary' %>
