--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
-      <h2 class="alert alert-danger"><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<!--      <h2 class="alert alert-danger"><%#= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>-->
 
       <ul>
         <% user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <li class="alert alert-danger"><%= message %></li>
         <% end %>
       </ul>
     </div>
