--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -16,11 +16,10 @@
   <% end %>
 
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :start_time %>
     <%= form.datetime_select :start_time, :id => 'start_time', html5: true %>
   </div>
-
 
   <div class="field">
     <%= form.label :end_time %>
