--- a/app/views/user_cabinet/index.html.erb
+++ b/app/views/user_cabinet/index.html.erb
@@ -2,3 +2,4 @@
 
 <%= link_to "My past appointments", user_cabinet_past_appointments_path, class: "btn btn-outline-secondary" %>
 <%= link_to "My future appointments", user_cabinet_future_appointments_path, class: "btn btn-outline-secondary" %>
+<%= link_to "Edit my account", edit_user_path(current_user), class: "btn btn-outline-secondary" %>
