add information protection from external users

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -47,7 +47,7 @@
 
 
   <div class="actions">
-    <%= form.submit :class => 'btn btn-outline-primary' %>
+    <%= form.submit :class => 'btn btn-outline-primary mt-3' %>
   </div>
 <% end %>
 
