--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', appointment: @appointment %>
 
-<%= link_to 'Show', @appointment, :class => 'btn btn-outline-secondary' %> |
-<%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary' %>
+<%= link_to 'Show', @appointment, :class => 'btn btn-outline-secondary mt-3' %> |
+<%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary mt-3' %>
