--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -31,4 +31,4 @@
 
 <%= render 'form', appointment: @appointment %>
 
-<%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary' %>
+<%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary mt-3' %>
