--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -19,5 +19,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_appointment_path(@appointment), :class => 'btn btn-outline-secondary' %> |
-<%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary' %>
+<%= link_to 'Edit', edit_appointment_path(@appointment), :class => 'btn btn-outline-secondary mt-3' %> |
+<%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary mt-3' %>
