--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -26,6 +26,6 @@
 
 <br>
 
-<%= link_to 'New Doctor', new_doctor_path, :class => 'btn btn-outline-primary' %>
+<%= link_to 'New Doctor', new_doctor_path, :class => 'btn btn-outline-primary mt-3' %>
 
 <%#= javascript_pack_tag 'myjs' %>
