--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Appointment', new_appointment_path, :class => 'btn btn-outline-primary' %>
+<%= link_to 'New Appointment', new_appointment_path, :class => 'btn btn-outline-primary mt-3' %>
