--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -28,7 +28,7 @@
       <%= form.text_field :img, :class => 'form-control' %>
     </div>
 
-    <div class="actions">
+    <div class="mt-3">
       <%= form.submit :class => 'btn btn-outline-primary' %>
     </div>
   </div>
