--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', doctor: @doctor %>
 
-<%= link_to 'Show', @doctor, :class => 'btn btn-outline-secondary' %> |
-<%= link_to 'Back', doctors_path , :class => 'btn btn-outline-secondary'%>
+<%= link_to 'Show', @doctor, :class => 'btn btn-outline-secondary mt-3' %> |
+<%= link_to 'Back', doctors_path , :class => 'btn btn-outline-secondary mt-3'%>
