--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', doctor: @doctor %>
 
-<%= link_to 'Back', doctors_path, :class => 'btn btn-outline-secondary' %>
+<%= link_to 'Back', doctors_path, :class => 'btn btn-outline-secondary mt-3' %>
