--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,7 +38,7 @@
     </div>
 
     <% if is_admin? %>
-      <div class="field">
+      <div class="form-group">
         <%= form.radio_button(:role, "admin") %>
         <%= form.label(:role, "Admin") %>
         <%= form.radio_button(:role, "user") %>
@@ -46,7 +46,7 @@
       </div>
     <% end %>
 
-    <div class="actions">
+    <div class="mt-3">
       <%= form.submit :class => 'btn btn-outline-primary' %>
     </div>
   </div>
