--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path, :class => 'btn btn-outline-primary' %>
+<%= link_to 'New User', new_user_path, :class => 'btn btn-outline-primary mt-3' %>
