--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,5 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user), :class => 'btn btn-outline-secondary' %> |
-<%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary' %>
+<%= link_to 'Edit', edit_user_path(@user), :class => 'btn btn-outline-secondary mt-3' %> |
+<%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
