--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,16 +2,17 @@
 
 <h1>Doctors</h1>
 
-<table id='table'>
-  <thead>
+<% if @doctors.length > 0 %>
+  <table id='table'>
+    <thead>
     <tr>
       <th>Name</th>
       <th>Position</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @doctors.each do |doctor| %>
       <tr>
         <td><%= doctor.name %></td>
@@ -21,11 +22,13 @@
         <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+<% else %>
+  <h3>There are no any doctors yet.</h3>
+<% end %>
 
-<br>
+
 
 <%= link_to 'New Doctor', new_doctor_path, :class => 'btn btn-outline-primary mt-3' %>
 
-<%#= javascript_pack_tag 'myjs' %>
