add different colors for alert and notice

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,11 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user), :class => 'btn btn-outline-secondary mt-3' %> |
-<%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
+<%= link_to 'Edit', edit_user_path(@user), :class => 'btn btn-outline-secondary mt-3' %>
+
+<% if  is_admin? %>
+  <%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
+<% else %>
+  <%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary mt-3' %>
+<% end %>
+
