--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -20,4 +20,9 @@
 
 
 <%= link_to 'Edit', edit_appointment_path(@appointment), :class => 'btn btn-outline-secondary mt-3' %> |
-<%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary mt-3' %>
+
+<% if  is_admin? %>
+  <%= link_to 'Back', appointments_path, :class => 'btn btn-outline-secondary mt-3' %>
+<% else %>
+  <%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary mt-3' %>
+<% end %>
