--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -37,7 +37,7 @@
       <%= form.email_field :email, size: 40, :class => 'form-control' %>
     </div>
 
-    <% if is_admin? %>
+    <% if logged_in? && is_admin? %>
       <div class="form-group">
         <%= form.radio_button(:role, "admin") %>
         <%= form.label(:role, "Admin") %>
