--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,11 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user, :class => 'btn btn-outline-secondary mt-3' %> |
-<%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
+<%= link_to 'Show', @user, :class => 'btn btn-outline-secondary mt-3' %>
+
+<% if  is_admin? %>
+  <%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
+<% else %>
+  <%= link_to 'Back', main_page_index_path, :class => 'btn btn-outline-secondary mt-3' %>
+<% end %>
+
