--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,8 @@
+
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
-<!--      <h2 class="alert alert-danger"><%#= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>-->
+      <!--      <h2 class="alert alert-danger"><%#= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>-->
 
       <ul>
         <% user.errors.full_messages.each do |message| %>
@@ -11,43 +12,45 @@
     </div>
   <% end %>
 
-  <h2>Enter User Details</h2>
+  <div class="row ">
+    <div class="col-4">
+        <h2>Enter User Details</h2>
 
-  <div class="form-group" action="/login">
+          <div class="field">
+            <%= form.label :name, 'Name:' %>
+            <%= form.text_field :name, size: 40, :class => 'form-control' %>
+          </div>
 
-    <div class="field">
-      <%= form.label :name, 'Name:' %>
-      <%= form.text_field :name, size: 40, :class => 'form-control' %>
-    </div>
+          <div class="field">
+            <%= form.label :password, 'Password:' %>
+            <%= form.password_field :password, size: 40, :class => 'form-control' %>
+          </div>
 
-    <div class="field">
-      <%= form.label :password, 'Password:' %>
-      <%= form.password_field :password, size: 40, :class => 'form-control' %>
-    </div>
+          <div class="field">
+            <%= form.label :password_confirmation, 'Confirm:' %>
+            <%= form.password_field :password_confirmation,
+                                    id: :user_password_confirmation,
+                                    size: 40, :class => 'form-control' %>
+          </div>
 
-    <div class="field">
-      <%= form.label :password_confirmation, 'Confirm:' %>
-      <%= form.password_field :password_confirmation,
-                              id: :user_password_confirmation,
-                              size: 40, :class => 'form-control' %>
-    </div>
+          <div class="field">
+            <%= form.label :email, 'Email' %>
+            <%= form.email_field :email, size: 40, :class => 'form-control' %>
+          </div>
 
-    <div class="field">
-      <%= form.label :email, 'Email' %>
-      <%= form.email_field :email, size: 40, :class => 'form-control' %>
-    </div>
+          <% if logged_in? && is_admin? %>
+            <div class="form-group">
+              <%= form.radio_button(:role, "admin") %>
+              <%= form.label(:role, "Admin") %>
+              <%= form.radio_button(:role, "user") %>
+              <%= form.label(:role, "User") %>
+            </div>
+          <% end %>
 
-    <% if logged_in? && is_admin? %>
-      <div class="form-group">
-        <%= form.radio_button(:role, "admin") %>
-        <%= form.label(:role, "Admin") %>
-        <%= form.radio_button(:role, "user") %>
-        <%= form.label(:role, "User") %>
-      </div>
-    <% end %>
-
-    <div class="mt-3">
-      <%= form.submit :class => 'btn btn-outline-primary' %>
+          <div class="mt-3">
+            <%= form.submit :class => 'btn btn-outline-primary' %>
+          </div>
     </div>
   </div>
 <% end %>
+
