--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -15,28 +15,28 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">User name</th>
+        <th scope="col">Patient</th>
         <th scope="col">Date</th>
         <th scope="col">Start time</th>
         <th scope="col">End time</th>
         <th scope="col">Doctor name</th>
         <th scope="col">Show</th>
         <th scope="col">Edit</th>
-        <th scope="col">Destroy</th>
+        <th scope="col">Cancel</th>
       </tr>
     </thead>
 
     <tbody>
       <% @appointments.each do |appointment| %>
         <tr>
-          <td><%= appointment.user.name %></td>
+          <td><%= appointment.user.email %></td>
           <td><%= appointment.start_time.strftime('%F') %></td>
           <td><%= appointment.start_time.strftime('%H:%M') %></td>
           <td><%= appointment.end_time.strftime('%H:%M') %></td>
           <td><%= appointment.doctor.name %></td>
           <td><%= link_to 'Show', appointment, :class => 'btn btn-outline-secondary' %></td>
           <td><%= link_to 'Edit', edit_appointment_path(appointment), :class => 'btn btn-outline-secondary' %></td>
-          <td><%= link_to 'Destroy', appointment, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
+          <td><%= link_to 'Cancel', appointment, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
         </tr>
       <% end %>
     </tbody>
