added protection from deleting or updating the last admin to user

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= link_to 'Appointments', certain_doctor_appointments_index_path(doctor, :id => doctor.id), :class => 'btn btn-outline-secondary' %></td>
 <!--        <td><%#= link_to 'Show', doctor, :class => 'btn btn-outline-secondary' %></td>-->
         <td><%= link_to 'Edit', edit_doctor_path(doctor), :class => 'btn btn-outline-secondary' %></td>
-        <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
+        <td><%= link_to 'Delete', doctor, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
       </tr>
     <% end %>
     </tbody>
