--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <% if notice %>
   <p id="notice" class="alert alert-success"><%= notice %></p>
 <% end %>
+<% if alert %>
+  <p id="alert" class="alert alert-danger"><%= alert %></p>
+<% end %>
 
 <h1>Users</h1>
 
@@ -20,7 +23,7 @@
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user, :class => 'btn btn-outline-secondary' %></td>
         <td><%= link_to 'Edit', edit_user_path(user), :class => 'btn btn-outline-secondary' %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
+        <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-outline-danger' %></td>
       </tr>
     <% end %>
   </tbody>
