--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,4 +1,9 @@
-<p id="notice" alert alert-success><%= notice %></p>
+<% if notice %>
+  <p id="notice" class="alert alert-success"><%= notice %></p>
+<% end %>
+<% if alert %>
+  <p id="alert" class="alert alert-danger"><%= alert %></p>
+<% end %>
 
 <h1>Doctors</h1>
 
