--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -20,9 +20,9 @@
         <th scope="col">Start time</th>
         <th scope="col">End time</th>
         <th scope="col">Doctor name</th>
-        <th scope="col">Show</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Cancel</th>
+        <th scope="col"></th>
+        <th scope="col">Management</th>
+        <th scope="col"></th>
       </tr>
     </thead>
 
