--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -1,19 +1,27 @@
-  <h1>Our doctors</h1>
+<% if notice %>
+  <p id="notice" class="alert alert-success"><%= notice %></p>
+<% end %>
 
-  <div class="row">
-    <% @doctors.each do |doctor| %>
-      <div style="max-width: 300px" >
-        <div class="card" >
-          <img src=<%= doctor.img %> class="card-img-top" height="200" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"><%= doctor.name %></h5>
-            <p class="card-text"><%= doctor.position %></p>
-            <%= link_to 'Make an appointment', new_appointment_path(doctor_id: doctor.id), :class => "btn btn-outline-primary" %>
-          </div>
+<% if alert %>
+  <p id="notice" class="alert alert-danger"><%= alert %></p>
+<% end %>
+
+<h1>Our doctors</h1>
+
+<div class="row">
+  <% @doctors.each do |doctor| %>
+    <div style="max-width: 300px" >
+      <div class="card" >
+        <img src=<%= doctor.img %> class="card-img-top" height="200" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><%= doctor.name %></h5>
+          <p class="card-text"><%= doctor.position %></p>
+          <%= link_to 'Make an appointment', new_appointment_path(doctor_id: doctor.id), :class => "btn btn-outline-primary" %>
         </div>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+</div>
 
 
 
