--- a/app/views/user_cabinet/future_appointments.html.erb
+++ b/app/views/user_cabinet/future_appointments.html.erb
@@ -8,9 +8,9 @@
       <th scope="col">Date</th>
       <th scope="col">Start time</th>
       <th scope="col">End time</th>
-      <th scope="col">Show</th>
-      <th scope="col">Edit</th>
-      <th scope="col">Destroy</th>
+      <th scope="col"></th>
+      <th scope="col">Management</th>
+      <th scope="col"></th>
     </tr>
     </thead>
 
