--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,11 +19,13 @@
           <div class="field">
             <%= form.label :name, 'Name:' %>
             <%= form.text_field :name, size: 40, :class => 'form-control' %>
+            <small id="nameHelp" class="form-text text-muted">Name must consists at least of 3 characters</small>
           </div>
 
           <div class="field">
             <%= form.label :password, 'Password:' %>
             <%= form.password_field :password, size: 40, :class => 'form-control' %>
+            <small id="passwordHelp" class="form-text text-muted">Password must consists at least of 6 characters</small>
           </div>
 
           <div class="field">
@@ -36,6 +38,7 @@
           <div class="field">
             <%= form.label :email, 'Email' %>
             <%= form.email_field :email, size: 40, :class => 'form-control' %>
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
 
           <% if logged_in? && is_admin? %>
