--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
+
+  <%#= link_to 'Back', users_path, :class => 'btn btn-outline-secondary mt-3' %>
